src/objects/BillNPay__Notification_Messages__c.object
<CustomObject>
    <description>Message to send when condition is true</description>
    <fields>
        <fullName>BillNPay__Message_Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Select the Message Template to send when the condition is met</inlineHelpText>
        <label>Message Template</label>
        <referenceTo>BillNPay__Message_Templates__c</referenceTo>
        <relationshipLabel>Notification Messages</relationshipLabel>
        <relationshipName>Notification_Messages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BillNPay__Notification_Condition__c</fullName>
        <label>Notification Condition</label>
        <referenceTo>BillNPay__Notifications__c</referenceTo>
        <relationshipLabel>Notification Messages</relationshipLabel>
        <relationshipName>Notification_Messages</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>BillNPay__Send_the_Message__c</fullName>
        <inlineHelpText>When condition is met, when should the message be sent</inlineHelpText>
        <label>Send the Message</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Now</fullName>
                </value>
                <value>
                    <fullName>Send Tomorrow</fullName>
                </value>
                <value>
                    <fullName>As Soon As Possible</fullName>
                </value>
                <value>
                    <fullName>On Next Day of Month</fullName>
                </value>
                <value>
                    <fullName>On Next Day of Week</fullName>
                </value>
                <value>
                    <fullName>Days Before Due Date</fullName>
                </value>
                <value>
                    <fullName>Days After Due Date</fullName>
                </value>
                <value>
                    <fullName>On Due Date</fullName>
                </value>
                <value>
                    <fullName>Days From Invoice Creation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BillNPay__Value__c</fullName>
        <label>Value</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>BillNPay__Send_the_Message__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>Monday</fullName>
                </value>
                <value>
                    <fullName>Tuesday</fullName>
                </value>
                <value>
                    <fullName>Wednesday</fullName>
                </value>
                <value>
                    <fullName>Thursday</fullName>
                </value>
                <value>
                    <fullName>Friday</fullName>
                </value>
                <value>
                    <fullName>Saturday</fullName>
                </value>
                <value>
                    <fullName>Sunday</fullName>
                </value>
                <value>
                    <fullName>Day 1</fullName>
                </value>
                <value>
                    <fullName>Day 2</fullName>
                </value>
                <value>
                    <fullName>Day 3</fullName>
                </value>
                <value>
                    <fullName>Day 4</fullName>
                </value>
                <value>
                    <fullName>Day 5</fullName>
                </value>
                <value>
                    <fullName>Day 6</fullName>
                </value>
                <value>
                    <fullName>Day 7</fullName>
                </value>
                <value>
                    <fullName>Day 8</fullName>
                </value>
                <value>
                    <fullName>Day 9</fullName>
                </value>
                <value>
                    <fullName>Day 10</fullName>
                </value>
                <value>
                    <fullName>Day 11</fullName>
                </value>
                <value>
                    <fullName>Day 12</fullName>
                </value>
                <value>
                    <fullName>Day 13</fullName>
                </value>
                <value>
                    <fullName>Day 14</fullName>
                </value>
                <value>
                    <fullName>Day 15</fullName>
                </value>
                <value>
                    <fullName>Day 16</fullName>
                </value>
                <value>
                    <fullName>Day 17</fullName>
                </value>
                <value>
                    <fullName>Day 18</fullName>
                </value>
                <value>
                    <fullName>Day 19</fullName>
                </value>
                <value>
                    <fullName>Day 20</fullName>
                </value>
                <value>
                    <fullName>Day 21</fullName>
                </value>
                <value>
                    <fullName>Day 22</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Notification Message</label>
    <listViews>
        <fullName>BillNPay__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>NM-{000}</displayFormat>
        <label>Notification Message Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Notification Messages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>